fixed x axis scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,7 @@ body * {
 select {
   appearance: none;
 }
+
+.slick-arrow {
+  display: none!important;
+}
